--- a/singleVideo.html
+++ b/singleVideo.html
@@ -180,28 +180,29 @@
     <!-- End Header -->
 
     <!-- main SingleNews -->
-    <main class="SingleNews">
+    <main class="SingleVideo">
       <section>
         <div class="container">
           <div class="row">
             <!-- main Section column right -->
             <div class="col-lg-8 col-md-12 col-12 columnRightCol">
-              <h1>
-                داوادەکرێت چین و توێژەکانی کەرکوک ڕێژەی دەنگدان بەرزبکەنەوە
-              </h1>
-              <div class="description">
-                <h3>کوردستان</h3>
-                <span><span class="clock">2 </span> کاتژمێر پێش ئێستا‌</span>
-                <span
-                  ><span class="count"> 260 </span>جار خوێندراوه‌ته‌وه</span
-                >
-              </div>
               <div class="dewscriptionSingleNews">
-                <img
-                  src="./assets/img/image/pepole.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
+                <h1>
+                  داوادەکرێت چین و توێژەکانی کەرکوک ڕێژەی دەنگدان بەرزبکەنەوە
+                </h1>
+                <div class="description">
+                  <h3>کوردستان</h3>
+                  <span><span class="clock">2 </span> کاتژمێر پێش ئێستا‌</span>
+                  <span
+                    ><span class="count"> 260 </span>جار خوێندراوه‌ته‌وه</span
+                  >
+                </div>
+                <iframe
+                  width="100%"
+                  height="500"
+                  src="https://www.youtube.com/embed/tgbNymZ7vqY"
+                >
+                </iframe>
                 <p>
                   <br />
                   شارپرێس<br />
