--- a/dailypen.html
+++ b/dailypen.html
@@ -33,7 +33,7 @@
 
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css"
+      href="./assets/vendor/bootstrap/css/bootstrap-rtll.css"
       integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N"
       crossorigin="anonymous"
     />
@@ -41,7 +41,6 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
   </head>
-
   <body>
     <!-- ======= Header ======= -->
     <header>
@@ -50,7 +49,15 @@
         <div
           class="container d-flex justify-content-between align-items-center"
         >
-          <i class="bi bi-search"></i>
+          <button class="searchButton" id="iconSearch">
+            <i class="bi bi-search"></i>
+          </button>
+          <form action="" class="searchInput" id="FormSearch">
+            <input type="text" placeholder="گەڕان" />
+            <button type="submit">
+              <i class="bi bi-search"></i>
+            </button>
+          </form>
           <div class="logo">
             <a href="/">
               <img src="./assets/img/logo/Logo.png" class="img-fluid" alt="" />
@@ -97,7 +104,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./product.html">هەواڵ</a>
+                <a class="nav-link" href="#">هەواڵ</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">ڕاپۆرت</a>
@@ -111,15 +118,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">بیروڕا</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#">قەڵەمی ڕۆژ</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#">هەمەڕەنگ</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#">چاوپێکەوتن</a>
               </li>
@@ -177,7 +181,7 @@
       </div>
       <!-- ======= End Ad in header =======  -->
     </header>
-    <!-- End Header -->
+    <!-- ======= End Header ======= -->
 
     <main>
       <section class="dailypen pb-3">
@@ -199,7 +203,7 @@
                       </div>
                     </a>
                   </li>
-                   <li class="d-flex align-items-top">
+                  <li class="d-flex align-items-top">
                     <a href="/">
                       <img src="./assets/img/image/sozan.jpg" alt="" />
                     </a>
@@ -211,7 +215,7 @@
                       </div>
                     </a>
                   </li>
-                   <li class="d-flex align-items-top">
+                  <li class="d-flex align-items-top">
                     <a href="/">
                       <img src="./assets/img/image/sozan.jpg" alt="" />
                     </a>
@@ -223,7 +227,7 @@
                       </div>
                     </a>
                   </li>
-                   <li class="d-flex align-items-top">
+                  <li class="d-flex align-items-top">
                     <a href="/">
                       <img src="./assets/img/image/sozan.jpg" alt="" />
                     </a>
@@ -235,7 +239,7 @@
                       </div>
                     </a>
                   </li>
-                   <li class="d-flex align-items-top">
+                  <li class="d-flex align-items-top">
                     <a href="/">
                       <img src="./assets/img/image/sozan.jpg" alt="" />
                     </a>
@@ -247,7 +251,7 @@
                       </div>
                     </a>
                   </li>
-                   <li class="d-flex align-items-top">
+                  <li class="d-flex align-items-top">
                     <a href="/">
                       <img src="./assets/img/image/sozan.jpg" alt="" />
                     </a>
@@ -259,7 +263,7 @@
                       </div>
                     </a>
                   </li>
-                   <li class="d-flex align-items-top">
+                  <li class="d-flex align-items-top">
                     <a href="/">
                       <img src="./assets/img/image/sozan.jpg" alt="" />
                     </a>
@@ -271,7 +275,7 @@
                       </div>
                     </a>
                   </li>
-                   <li class="d-flex align-items-top">
+                  <li class="d-flex align-items-top">
                     <a href="/">
                       <img src="./assets/img/image/sozan.jpg" alt="" />
                     </a>
@@ -482,13 +486,9 @@
       </div>
     </footer>
 
-    <!-- Vendor JS Files -->
+    <script src="./assets/vendor/jquery/jquery.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
