--- a/singleVideo.html
+++ b/singleVideo.html
@@ -33,7 +33,7 @@
 
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css"
+      href="./assets/vendor/bootstrap/css/bootstrap-rtll.css"
       integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N"
       crossorigin="anonymous"
     />
@@ -50,7 +50,15 @@
         <div
           class="container d-flex justify-content-between align-items-center"
         >
-          <i class="bi bi-search"></i>
+          <button class="searchButton" id="iconSearch">
+            <i class="bi bi-search"></i>
+          </button>
+          <form action="" class="searchInput" id="FormSearch">
+            <input type="text" placeholder="گەڕان" />
+            <button type="submit">
+              <i class="bi bi-search"></i>
+            </button>
+          </form>
           <div class="logo">
             <a href="/">
               <img src="./assets/img/logo/Logo.png" class="img-fluid" alt="" />
@@ -97,7 +105,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./product.html">هەواڵ</a>
+                <a class="nav-link" href="#">هەواڵ</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">ڕاپۆرت</a>
@@ -111,15 +119,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">بیروڕا</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#">قەڵەمی ڕۆژ</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#">هەمەڕەنگ</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#">چاوپێکەوتن</a>
               </li>
@@ -177,7 +182,7 @@
       </div>
       <!-- ======= End Ad in header =======  -->
     </header>
-    <!-- End Header -->
+    <!-- ======= End Header ======= -->
 
     <!-- main SingleNews -->
     <main class="SingleVideo">
@@ -657,13 +662,9 @@
       </div>
     </footer>
 
-    <!-- Vendor JS Files -->
+    <script src="./assets/vendor/jquery/jquery.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
