--- a/index.html
+++ b/index.html
@@ -290,7 +290,9 @@
           <div class="row">
             <!-- Column One in Raport section -->
             <div class="col-lg-6 col-md-12 col-12 col-12 mt-lg-0 mt-md-3">
-              <h1 class="titleCardD">ڕاپۆرت و چاوپێکەوتن</h1>
+              <h1 class="titleCardD">
+                ڕاپۆرت و چاوپێکەوتن
+              </h1>
               <div class="row row_OO">
                 <div class="col-lg-6 col-md-6">
                   <div class="card h-100">
