--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-    <!-- Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter"
-      rel="stylesheet"
-    />
 
     <!-- Vendor CSS Files -->
     <link
@@ -104,8 +99,27 @@
                   >سەرەتا</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">هەواڵ</a>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  هەواڵ
+                  <span>
+                    <i class="bi bi-plus-lg"></i>
+                  </span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">کوردستان </a>
+                  <a class="dropdown-item" href="#">عێراق </a>
+                  <a class="dropdown-item" href="#">جیهان</a>
+                  <a class="dropdown-item" href="#">ئابوری </a>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">ڕاپۆرت</a>
@@ -113,6 +127,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">چاوپێکەوتن</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="#">مەلەفی تایبەت</a>
               </li>
@@ -290,9 +305,7 @@
           <div class="row">
             <!-- Column One in Raport section -->
             <div class="col-lg-6 col-md-12 col-12 col-12 mt-lg-0 mt-md-3">
-              <h1 class="titleCardD">
-                ڕاپۆرت و چاوپێکەوتن
-              </h1>
+              <h1 class="titleCardD">ڕاپۆرت و چاوپێکەوتن</h1>
               <div class="row row_OO">
                 <div class="col-lg-6 col-md-6">
                   <div class="card h-100">
@@ -1149,10 +1162,11 @@
 
     <!-- Vendor JS Files -->
     <script src="./assets/vendor/jquery/jquery.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
