--- a/dailypen.html
+++ b/dailypen.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+  <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Sharpress</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-
 
     <!-- Vendor CSS Files -->
     <link
@@ -205,7 +204,9 @@
           <div class="row">
             <div class="col-lg-9 col-md-12 col-12">
               <div class="newComment morenews mt-4">
-                <h1 class="titleCardD">قەڵەمی ڕۆژ</h1>
+                <h1 class="titleCardD">
+                  <a href=""> قەڵەمی ڕۆژ </a>
+                </h1>
                 <ul class="list-unstyled list-comment">
                   <li class="d-flex align-items-top">
                     <a href="/">
@@ -328,7 +329,9 @@
             <div class="col-lg-3 col-md-12">
               <div class="contentColumnRight">
                 <div class="twin-report-side mt-4">
-                  <h3 class="titleCardD">ڕاپۆرت و چاوپێکەوتن</h3>
+                  <h3 class="titleCardD">
+                    <a href=""> ڕاپۆرت و چاوپێکەوتن </a>
+                  </h3>
                   <div class="boximageF">
                     <a href="">
                       <img
@@ -357,46 +360,56 @@
                   </div>
                 </div>
                 <div class="specially media">
-                  <h1 class="titleCardD">مەلەفی تایبەت</h1>
+                  <h1 class="titleCardD">
+                    <a href=""> مەلەفی تایبەت </a>
+                  </h1>
                   <div class="card">
-                    <img
-                      class="card-img-top img-fluid"
-                      src="./assets/img/image/woman.JPG"
-                      alt="Card image cap"
-                    />
-                    <div class="card-body">
-                      <div class="titleCard">
-                        <h5 class="card-title"><i class="bi bi-quote"></i></h5>
-                        <h6 class="card-text">
-                          ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
-                          پێدراوە
-                        </h6>
+                    <a href="">
+                      <img
+                        class="card-img-top img-fluid"
+                        src="./assets/img/image/woman.JPG"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <div class="titleCard">
+                          <h5 class="card-title">
+                            <i class="bi bi-quote"></i>
+                          </h5>
+                          <h6 class="card-text">
+                            ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
+                            پێدراوە
+                          </h6>
+                        </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
                 <div class="Outwardly">
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
