--- a/descriptionComment.html
+++ b/descriptionComment.html
@@ -8,7 +8,6 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-
     <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -269,34 +268,40 @@
             <div class="col-lg-4 col-md-12 col-12">
               <div class="contentColumnRight">
                 <div class="columnleftAd">
-                  <img
-                    src="./assets/img/image/171752022_Kosarrr.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
+                  <a href="">
+                    <img
+                      src="./assets/img/image/171752022_Kosarrr.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </a>
                 </div>
                 <div class="Outwardly">
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
