--- a/singleNews.html
+++ b/singleNews.html
@@ -244,7 +244,9 @@
                 </div>
               </div>
               <div class="importantNews">
-                <h1 class="titleCardD">گرنگترین هەواڵ</h1>
+                <h1 class="titleCardD">
+                  <a href=""> گرنگترین هەواڵ </a>
+                </h1>
                 <div class="row">
                   <div class="col-lg-4 col-md-4 col-12 sameColor">
                     <div class="col-12">
@@ -461,7 +463,9 @@
                   />
                 </div>
                 <div class="twin-report-side mt-3">
-                  <h3 class="titleCardD">ڕاپۆرت و چاوپێکەوتن</h3>
+                  <h3 class="titleCardD">
+                    <a href=""> ڕاپۆرت و چاوپێکەوتن </a>
+                  </h3>
                   <div class="boximageF">
                     <a href="">
                       <img
@@ -490,83 +494,103 @@
                   </div>
                 </div>
                 <div class="specially media">
-                  <h1 class="titleCardD">مەلەفی تایبەت</h1>
+                  <h1 class="titleCardD">
+                    <a href=""> مەلەفی تایبەت </a>
+                  </h1>
                   <div class="card">
-                    <img
-                      class="card-img-top img-fluid"
-                      src="./assets/img/image/woman.JPG"
-                      alt="Card image cap"
-                    />
-                    <div class="card-body">
-                      <div class="titleCard">
-                        <h5 class="card-title"><i class="bi bi-quote"></i></h5>
-                        <h6 class="card-text">
-                          ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
-                          پێدراوە
-                        </h6>
+                    <a href="">
+                      <img
+                        class="card-img-top img-fluid"
+                        src="./assets/img/image/woman.JPG"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <div class="titleCard">
+                          <h5 class="card-title">
+                            <i class="bi bi-quote"></i>
+                          </h5>
+                          <h6 class="card-text">
+                            ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
+                            پێدراوە
+                          </h6>
+                        </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
                 <div class="newComment morenews">
-                  <h1 class="titleCardD">قەڵەمی ڕۆژ</h1>
+                  <h1 class="titleCardD">
+                    <a href=""> قەڵەمی ڕۆژ </a>
+                  </h1>
                   <ul class="list-unstyled list-comment">
-                    <li class="d-flex align-items-top">
-                      <img src="./assets/img/image/sozan.jpg" alt="" />
-                      <div class="textComment">
-                        <i class="bi bi-quote"></i>
-                        <h2>ئێمە دەستوورمان ناوێ</h2>
-                        <h3>سۆزان حەمەتاتە</h3>
-                      </div>
+                    <li class="align-items-top">
+                      <a href="" class="d-flex">
+                        <img src="./assets/img/image/sozan.jpg" alt="" />
+                        <div class="textComment">
+                          <i class="bi bi-quote"></i>
+                          <h2>ئێمە دەستوورمان ناوێ</h2>
+                          <h3>سۆزان حەمەتاتە</h3>
+                        </div>
+                      </a>
                     </li>
-                    <li class="d-flex align-items-top">
-                      <img src="./assets/img/image/sozan.jpg" alt="" />
-                      <div class="textComment">
-                        <i class="bi bi-quote"></i>
-                        <h2>ئێمە دەستوورمان ناوێ</h2>
-                        <h3>سۆزان حەمەتاتە</h3>
-                      </div>
+                    <li class="align-items-top">
+                      <a href="" class="d-flex">
+                        <img src="./assets/img/image/sozan.jpg" alt="" />
+                        <div class="textComment">
+                          <i class="bi bi-quote"></i>
+                          <h2>ئێمە دەستوورمان ناوێ</h2>
+                          <h3>سۆزان حەمەتاتە</h3>
+                        </div>
+                      </a>
                     </li>
-                    <li class="d-flex align-items-top">
-                      <img src="./assets/img/image/sozan.jpg" alt="" />
-                      <div class="textComment">
-                        <i class="bi bi-quote"></i>
-                        <h2>ئێمە دەستوورمان ناوێ</h2>
-                        <h3>سۆزان حەمەتاتە</h3>
-                      </div>
+                    <li class="align-items-top">
+                      <a href="" class="d-flex">
+                        <img src="./assets/img/image/sozan.jpg" alt="" />
+                        <div class="textComment">
+                          <i class="bi bi-quote"></i>
+                          <h2>ئێمە دەستوورمان ناوێ</h2>
+                          <h3>سۆزان حەمەتاتە</h3>
+                        </div>
+                      </a>
                     </li>
                   </ul>
                 </div>
                 <div class="Outwardly">
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="columnleftAd">
-                  <img
-                    src="./assets/img/image/arya.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
+                  <a href="">
+                    <img
+                      src="./assets/img/image/arya.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </a>
                 </div>
               </div>
             </div>
