--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-
     <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -305,24 +304,30 @@
           <div class="row">
             <!-- Column One in Raport section -->
             <div class="col-lg-6 col-md-12 col-12 col-12 mt-lg-0 mt-md-3">
-              <h1 class="titleCardD">ڕاپۆرت و چاوپێکەوتن</h1>
+              <h1 class="titleCardD">
+                <a href="./"> ڕاپۆرت و چاوپێکەوتن </a>
+              </h1>
               <div class="row row_OO">
                 <div class="col-lg-6 col-md-6">
                   <div class="card h-100">
-                    <img
-                      class="card-img-top img-fluid"
-                      src="./assets/img/image/woman.JPG"
-                      alt="Card image cap"
-                    />
-                    <div class="card-body">
-                      <div class="titleCard">
-                        <h5 class="card-title"><i class="bi bi-quote"></i></h5>
-                        <h6 class="card-text">
-                          ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
-                          پێدراوە
-                        </h6>
+                    <a href="">
+                      <img
+                        class="card-img-top img-fluid"
+                        src="./assets/img/image/woman.JPG"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <div class="titleCard">
+                          <h5 class="card-title">
+                            <i class="bi bi-quote"></i>
+                          </h5>
+                          <h6 class="card-text">
+                            ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
+                            پێدراوە
+                          </h6>
+                        </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6 d-flex flex-column gap-3">
@@ -362,24 +367,30 @@
             <div
               class="col-lg-6 col-md-12 col-12 mt-lg-0 mt-md-3 mb-lg-0 mb-md-3"
             >
-              <h1 class="titleCardD">مەلەفی تایبەت</h1>
+              <h1 class="titleCardD">
+                <a href=""> مەلەفی تایبەت </a>
+              </h1>
               <div class="row row_OO">
                 <div class="col-lg-6 col-md-6">
                   <div class="card h-100">
-                    <img
-                      class="card-img-top img-fluid"
-                      src="./assets/img/image/snapthop.jpg"
-                      alt="Card image cap"
-                    />
-                    <div class="card-body">
-                      <div class="titleCard">
-                        <h5 class="card-title"><i class="bi bi-quote"></i></h5>
-                        <h6 class="card-text">
-                          بەشداریكردن لە هەڵبژاردنەكان و پرۆسەی دەنگدان لە
-                          كەركوك یان قەبوڵكردنی رەزیلی و زەلیلی ؟
-                        </h6>
+                    <a href="">
+                      <img
+                        class="card-img-top img-fluid"
+                        src="./assets/img/image/snapthop.jpg"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <div class="titleCard">
+                          <h5 class="card-title">
+                            <i class="bi bi-quote"></i>
+                          </h5>
+                          <h6 class="card-text">
+                            بەشداریكردن لە هەڵبژاردنەكان و پرۆسەی دەنگدان لە
+                            كەركوك یان قەبوڵكردنی رەزیلی و زەلیلی ؟
+                          </h6>
+                        </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6 d-flex flex-column gap-3">
@@ -451,7 +462,9 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-9 col-md-12">
-              <h1 class="titleCardD">هەواڵی زیاتر</h1>
+              <h1 class="titleCardD">
+                <a href=""> هەواڵی زیاتر </a>
+              </h1>
               <div class="row rowCardMoreNew">
                 <div class="col-lg-4 col-md-4 CardMoreNew">
                   <a href="/" class="linkCard">
@@ -558,39 +571,49 @@
               </div>
             </div>
             <div class="col-lg-3 col-md-12">
-              <h1 class="titleCardD">قەڵەمی ڕۆژ</h1>
+              <h1 class="titleCardD">
+                <a href=""> قەڵەمی ڕۆژ </a>
+              </h1>
               <ul class="list-unstyled list-comment">
-                <li class="d-flex align-items-top">
-                  <img src="./assets/img/image/sozan.jpg" alt="" />
-                  <div class="textComment">
-                    <i class="bi bi-quote"></i>
-                    <h2>ئێمە دەستوورمان ناوێ</h2>
-                    <h3>سۆزان حەمەتاتە</h3>
-                  </div>
+                <li class="align-items-top">
+                  <a href="" class="d-flex">
+                    <img src="./assets/img/image/sozan.jpg" alt="" />
+                    <div class="textComment">
+                      <i class="bi bi-quote"></i>
+                      <h2>ئێمە دەستوورمان ناوێ</h2>
+                      <h3>سۆزان حەمەتاتە</h3>
+                    </div>
+                  </a>
                 </li>
-                <li class="d-flex align-items-top">
-                  <img src="./assets/img/image/sozan.jpg" alt="" />
-                  <div class="textComment">
-                    <i class="bi bi-quote"></i>
-                    <h2>ئێمە دەستوورمان ناوێ</h2>
-                    <h3>سۆزان حەمەتاتە</h3>
-                  </div>
+                <li class="align-items-top">
+                  <a href="" class="d-flex">
+                    <img src="./assets/img/image/sozan.jpg" alt="" />
+                    <div class="textComment">
+                      <i class="bi bi-quote"></i>
+                      <h2>ئێمە دەستوورمان ناوێ</h2>
+                      <h3>سۆزان حەمەتاتە</h3>
+                    </div>
+                  </a>
                 </li>
-                <li class="d-flex align-items-top">
-                  <img src="./assets/img/image/sozan.jpg" alt="" />
-                  <div class="textComment">
-                    <i class="bi bi-quote"></i>
-                    <h2>ئێمە دەستوورمان ناوێ</h2>
-                    <h3>سۆزان حەمەتاتە</h3>
-                  </div>
+                <li class="align-items-top">
+                  <a href="" class="d-flex">
+                    <img src="./assets/img/image/sozan.jpg" alt="" />
+                    <div class="textComment">
+                      <i class="bi bi-quote"></i>
+                      <h2>ئێمە دەستوورمان ناوێ</h2>
+                      <h3>سۆزان حەمەتاتە</h3>
+                    </div>
+                  </a>
                 </li>
-                <li class="d-flex align-items-top">
-                  <img src="./assets/img/image/sozan.jpg" alt="" />
-                  <div class="textComment">
-                    <i class="bi bi-quote"></i>
-                    <h2>ئێمە دەستوورمان ناوێ</h2>
-                    <h3>سۆزان حەمەتاتە</h3>
-                  </div>
+                <li class="align-items-top">
+                  <a href="" class="d-flex">
+                    <img src="./assets/img/image/sozan.jpg" alt="" />
+                    <div class="textComment">
+                      <i class="bi bi-quote"></i>
+                      <h2>ئێمە دەستوورمان ناوێ</h2>
+                      <h3>سۆزان حەمەتاتە</h3>
+                    </div>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -629,7 +652,9 @@
       <!-- ======= start slider Comment  -->
       <section class="sliderrComment">
         <div class="container">
-          <h1 class="titleCardD mb-3">بیروڕا</h1>
+          <h1 class="titleCardD mb-3">
+            <a href=""> بیروڕا </a>
+          </h1>
           <div class="swiper mySwiper">
             <div class="swiper-wrapper mb-5">
               <div class="swiper-slide">
@@ -866,52 +891,66 @@
               </div>
             </div>
             <div class="col-lg-3 col-md-12 col-12 media">
-              <h1 class="titleCardD">لە میدیاکانەوە</h1>
+              <h1 class="titleCardD">
+                <a href=""> لە میدیاکانەوە </a>
+              </h1>
               <div class="card">
-                <img
-                  class="card-img-top img-fluid"
-                  src="./assets/img/image/woman.JPG"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                  <div class="titleCard">
-                    <h5 class="card-title"><i class="bi bi-quote"></i></h5>
-                    <h6 class="card-text">
-                      ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
-                      پێدراوە
-                    </h6>
+                <a href="">
+                  <img
+                    class="card-img-top img-fluid"
+                    src="./assets/img/image/woman.JPG"
+                    alt="Card image cap"
+                  />
+                  <div class="card-body">
+                    <div class="titleCard">
+                      <h5 class="card-title"><i class="bi bi-quote"></i></h5>
+                      <h6 class="card-text">
+                        ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
+                        پێدراوە
+                      </h6>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
-              <h1 class="titleCardD mpm">زۆرترین خوێندراوە</h1>
+              <h1 class="titleCardD mpm">
+                <a href=""> زۆرترین خوێندراوە </a>
+              </h1>
               <ul class="list-unstyled list_moreDocument896">
                 <li>
-                  <span>7 خولەک پێش ئێستا‌</span>
-                  <h2>
-                    هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285 ئه‌ندامى
-                    ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
-                  </h2>
+                  <a href="">
+                    <span>7 خولەک پێش ئێستا‌</span>
+                    <h2>
+                      هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285
+                      ئه‌ندامى ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
+                    </h2>
+                  </a>
                 </li>
                 <li>
-                  <span>7 خولەک پێش ئێستا‌</span>
-                  <h2>
-                    هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285 ئه‌ندامى
-                    ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
-                  </h2>
+                  <a href="">
+                    <span>7 خولەک پێش ئێستا‌</span>
+                    <h2>
+                      هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285
+                      ئه‌ندامى ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
+                    </h2>
+                  </a>
                 </li>
                 <li>
-                  <span>7 خولەک پێش ئێستا‌</span>
-                  <h2>
-                    هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285 ئه‌ندامى
-                    ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
-                  </h2>
+                  <a href="">
+                    <span>7 خولەک پێش ئێستا‌</span>
+                    <h2>
+                      هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285
+                      ئه‌ندامى ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
+                    </h2>
+                  </a>
                 </li>
                 <li>
-                  <span>7 خولەک پێش ئێستا‌</span>
-                  <h2>
-                    هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285 ئه‌ندامى
-                    ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
-                  </h2>
+                  <a href="">
+                    <span>7 خولەک پێش ئێستا‌</span>
+                    <h2>
+                      هه‌ڵبژاردن له‌ 15 پارێزگاى عێراق ده‌ستیپێكرد.. 285
+                      ئه‌ندامى ئه‌نجومه‌ن هه‌ڵده‌بژێردرێن‌
+                    </h2>
+                  </a>
                 </li>
               </ul>
             </div>
