--- a/video.html
+++ b/video.html
@@ -8,7 +8,6 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-
     <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -206,7 +205,9 @@
           <div class="row">
             <!-- main Section column right -->
             <div class="col-lg-8 col-md-12 col-12">
-              <h1 class="titleCardD">ڤیدیۆ</h1>
+              <h1 class="titleCardD">
+                <a href=""> ڤیدیۆ </a>
+              </h1>
               <div class="d-flex flex-lg-row flex-md-row flex-column gap-3">
                 <div class="cardVideo">
                   <a href="">
@@ -410,7 +411,9 @@
             <div class="col-lg-4 col-md-12 col-12">
               <div class="contentColumnRight">
                 <div class="twin-report-side mt-3">
-                  <h3 class="titleCardD">ڕاپۆرت و چاوپێکەوتن</h3>
+                  <h3 class="titleCardD">
+                    <a href=""> ڕاپۆرت و چاوپێکەوتن </a>
+                  </h3>
                   <div class="boximageF">
                     <a href="">
                       <img
@@ -439,75 +442,93 @@
                   </div>
                 </div>
                 <div class="specially media">
-                  <h1 class="titleCardD">مەلەفی تایبەت</h1>
+                  <h1 class="titleCardD">
+                    <a href=""> مەلەفی تایبەت </a>
+                  </h1>
                   <div class="card">
-                    <img
-                      class="card-img-top img-fluid"
-                      src="./assets/img/image/woman.JPG"
-                      alt="Card image cap"
-                    />
-                    <div class="card-body">
-                      <div class="titleCard">
-                        <h5 class="card-title"><i class="bi bi-quote"></i></h5>
-                        <h6 class="card-text">
-                          ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
-                          پێدراوە
-                        </h6>
+                    <a href="">
+                      <img
+                        class="card-img-top img-fluid"
+                        src="./assets/img/image/woman.JPG"
+                        alt="Card image cap"
+                      />
+                      <div class="card-body">
+                        <div class="titleCard">
+                          <h5 class="card-title">
+                            <i class="bi bi-quote"></i>
+                          </h5>
+                          <h6 class="card-text">
+                            ژنان لەبنیاتنانی رۆژئاوای كوردستاندا رۆڵێكی دیارییان
+                            پێدراوە
+                          </h6>
+                        </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
                 <div class="newComment morenews">
-                  <h1 class="titleCardD">قەڵەمی ڕۆژ</h1>
+                  <h1 class="titleCardD">
+                    <a href=""> قەڵەمی ڕۆژ </a>
+                  </h1>
                   <ul class="list-unstyled list-comment">
-                    <li class="d-flex align-items-top">
-                      <img src="./assets/img/image/sozan.jpg" alt="" />
-                      <div class="textComment">
-                        <i class="bi bi-quote"></i>
-                        <h2>ئێمە دەستوورمان ناوێ</h2>
-                        <h3>سۆزان حەمەتاتە</h3>
-                      </div>
+                    <li class="align-items-top">
+                      <a href="" class="d-flex">
+                        <img src="./assets/img/image/sozan.jpg" alt="" />
+                        <div class="textComment">
+                          <i class="bi bi-quote"></i>
+                          <h2>ئێمە دەستوورمان ناوێ</h2>
+                          <h3>سۆزان حەمەتاتە</h3>
+                        </div>
+                      </a>
                     </li>
-                    <li class="d-flex align-items-top">
-                      <img src="./assets/img/image/sozan.jpg" alt="" />
-                      <div class="textComment">
-                        <i class="bi bi-quote"></i>
-                        <h2>ئێمە دەستوورمان ناوێ</h2>
-                        <h3>سۆزان حەمەتاتە</h3>
-                      </div>
+                    <li class="align-items-top">
+                      <a href="" class="d-flex">
+                        <img src="./assets/img/image/sozan.jpg" alt="" />
+                        <div class="textComment">
+                          <i class="bi bi-quote"></i>
+                          <h2>ئێمە دەستوورمان ناوێ</h2>
+                          <h3>سۆزان حەمەتاتە</h3>
+                        </div>
+                      </a>
                     </li>
-                    <li class="d-flex align-items-top">
-                      <img src="./assets/img/image/sozan.jpg" alt="" />
-                      <div class="textComment">
-                        <i class="bi bi-quote"></i>
-                        <h2>ئێمە دەستوورمان ناوێ</h2>
-                        <h3>سۆزان حەمەتاتە</h3>
-                      </div>
+                    <li class="align-items-top">
+                      <a href="" class="d-flex">
+                        <img src="./assets/img/image/sozan.jpg" alt="" />
+                        <div class="textComment">
+                          <i class="bi bi-quote"></i>
+                          <h2>ئێمە دەستوورمان ناوێ</h2>
+                          <h3>سۆزان حەمەتاتە</h3>
+                        </div>
+                      </a>
                     </li>
                   </ul>
                 </div>
                 <div class="Outwardly">
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                   <div class="cardSlider">
-                    <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
-                    <div class="personalty d-flex">
-                      <img
-                        src="./assets/img/image/sozan.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <h3>ئاری محەمەد هەرسین</h3>
-                    </div>
+                    <a href="">
+                      <h1>ئێمە پاسۆک بوین، بەس ڕقمان لە هیچ میللەتێک نەبو</h1>
+                      <div class="personalty d-flex">
+                        <img
+                          src="./assets/img/image/sozan.jpg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                        <h3>ئاری محەمەد هەرسین</h3>
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
